Adição do símbolo de energia para fixação
Reformulação do nome dos arquivos e adição de mais um item à tabela de ingredientes

--- a/src/main/resources/assets/ordem_paranormal/lang/en_us.json
+++ b/src/main/resources/assets/ordem_paranormal/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-    "item.ordem_paranormal.sangue": "Blood"
+    "item.ordem_paranormal.sangue_symbol": "Blood",
+    "item.ordem_paranormal.energia_symbol": "Energy"
 }
