--- a/src/main/resources/assets/ordem_paranormal/lang/pt_br.json
+++ b/src/main/resources/assets/ordem_paranormal/lang/pt_br.json
@@ -1,3 +1,4 @@
 {
-    "item.ordem_paranormal.sangue": "Sangue"
+    "item.ordem_paranormal.sangue_symbol": "Sangue",
+    "item.ordem_paranormal.energia_symbol": "Energia"
 }
