Aba do modo criativo adicionada

--- a/src/main/resources/assets/ordem_paranormal/lang/pt_br.json
+++ b/src/main/resources/assets/ordem_paranormal/lang/pt_br.json
@@ -1,4 +1,6 @@
 {
     "item.ordem_paranormal.sangue_symbol": "Sangue",
-    "item.ordem_paranormal.energia_symbol": "Energia"
+    "item.ordem_paranormal.energia_symbol": "Energia",
+    "creative_tab.ordem_tab": "Ordem Paranormal"
+
 }
