--- a/src/main/resources/assets/ordem_paranormal/lang/en_us.json
+++ b/src/main/resources/assets/ordem_paranormal/lang/en_us.json
@@ -1,4 +1,5 @@
 {
     "item.ordem_paranormal.sangue_symbol": "Blood",
-    "item.ordem_paranormal.energia_symbol": "Energy"
+    "item.ordem_paranormal.energia_symbol": "Energy",
+    "creative_tab.ordem_tab": "Paranormal Order"
 }
